docs: update formatting for a long line

--- a/changelog.org
+++ b/changelog.org
@@ -66,7 +66,8 @@ Adding one new option and updating selectors for ~2.2106.5~ update.
 - Updated a ton of broken selectors from the latest update. Known issues:
   + Compact mode is very usable, but it has broken selectors for badges
     - Tracked in issue [[https://github.com/vednoc/dark-whatsapp/issues/186][#186]].
-  + Fb-like tails, message positions, and perhaps some other options are broken. Will probably be fixed in the next update.
+  + Fb-like tails, message positions, and perhaps some other options are
+    broken. Will probably be fixed in the next update.
 
 ** 3.5.0 [2020-12-10 Thu]
 Adding one new option and updating selectors for ~2.2049.8~ update.
